@startuml

title __IO's Class Diagram__\n

  namespace io {
    class io.BufferedCharInputStream {
        ~ buff : CharBuffer
        ~ currentCapacity : int
        ~ newRead : boolean
        ~ sreader : InputStreamReader
        - B : int
        + BufferedCharInputStream()
        + BufferedCharInputStream()
        + close()
        + open()
        + readln()
        + seek()
        + setBufferSize()
    }
  }
  

  namespace io {
    class io.BufferedCharOutputStream {
        ~ buff : CharBuffer
        ~ swriter : OutputStreamWriter
        - B : int
        + BufferedCharOutputStream()
        + BufferedCharOutputStream()
        + close()
        + create()
        + setBufferSize()
        + writeln()
    }
  }
  

  namespace io {
    class io.CharInputStream {
        + CharInputStream()
        + CharInputStream()
        + readln()
    }
  }
  

  namespace io {
    class io.CharOutputStream {
        + CharOutputStream()
        + CharOutputStream()
        + writeln()
    }
  }
  

  namespace io {
    abstract class io.InputStream {
        # endOfStream : boolean
        # f : RandomAccessFile
        # pos : long
        # reader : FileReader
        + InputStream()
        + InputStream()
        + close()
        + end_of_stream()
        + open()
        {abstract} + readln()
        + seek()
        + size()
        # extractName()
    }
  }
  

  namespace io {
    class io.LineInputStream {
        - br : BufferedReader
        + LineInputStream()
        + LineInputStream()
        + close()
        + open()
        + readln()
        + seek()
    }
  }
  

  namespace io {
    class io.LineOutputStream {
        - bw : BufferedWriter
        + LineOutputStream()
        + LineOutputStream()
        + close()
        + create()
        + writeln()
    }
  }
  

  namespace io {
    class io.MappedInputStream {
        - B : int
        - buff : MappedByteBuffer
        - fc : FileChannel
        - fileSize : long
        - round : long
        + MappedInputStream()
        + MappedInputStream()
        + close()
        + open()
        + readln()
        + seek()
        + size()
    }
  }
  

  namespace io {
    class io.MappedOutputStream {
        - B : long
        - buff : MappedByteBuffer
        - bufferExist : boolean
        - f : File
        - fc : FileChannel
        - fileToWriteLen : long
        - pos : long
        - round : long
        + MappedOutputStream()
        + MappedOutputStream()
        + MappedOutputStream()
        + close()
        + create()
        + setFileToWriteLen()
        {static} + unmap()
        + writeln()
    }
  }
  

  namespace io {
    abstract class io.OutputStream {
        # writer : FileWriter
        + OutputStream()
        + OutputStream()
        + close()
        + create()
        {abstract} + writeln()
    }
  }
  

  io.BufferedCharInputStream -up-|> io.InputStream
  io.BufferedCharOutputStream -up-|> io.OutputStream
  io.CharInputStream -up-|> io.InputStream
  io.CharOutputStream -up-|> io.OutputStream
  io.LineInputStream -up-|> io.InputStream
  io.LineOutputStream -up-|> io.OutputStream
  io.MappedInputStream -up-|> io.InputStream
  io.MappedOutputStream -up-|> io.OutputStream


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
